[B]Version 3.9.7[/B]
    -updated sports channels
    
[B]Version 3.9.6[/B]
    -merged yellow and green channels together
    -smartcric fixed
    -added See TV

    
[B]Version 3.9.4[/B]
    -fixed yellow channels
    -fixed ebound video source
    - added support for VidRail


[B]Version 3.9.4[/B]
few v4 channels, not all working

[B]Version 3.9.3[/B]
Stop normal green for time being


[B]Version 3.9.2[/B]
Implemented CF check

[B]Version 3.9.1[/B]
Added Shows and Programs link

[B]Version 3.9.0[/B]
ads optimisation again

[B]Version 3.8.9[/B]
ads optimisation


[B]Version 3.8.8[/B]
Updated Pv2, v3 and greeen

[B]Version 3.8.7[/B]
undo v3 mistake

[B]Version 3.8.6[/B]
better WL condition

[B]Version 3.8.5[/B]
V3 added

[B]Version 3.8.3[/B]
WL highlights bug fixed

[B]Version 3.8.3[/B]
WL highlights


[B]Version 3.8.2[/B]
WL highlights


[B]Version 3.8.1[/B]
Waseeb and news one added from their sites


[B]Version 3.8.0[/B]
WC 24x7 and few SSport


[B]Version 3.7.5[/B]
crichd fixed

[B]Version 3.7.4[/B]
watchric fixed

[B]Version 3.7.3[/B]
fixed smart tv


[B]Version 3.7.2[/B]
changed url

[B]Version 3.7.1[/B]
using swf now


[B]Version 3.7.0[/B]
Fixed sss


[B]Version 3.6.6[/B]
Fixed ads

[B]Version 3.6.5[/B]
Fixed pv2

[B]Version 3.6.4[/B]
Playwire fix


[B]Version 3.6.3[/B]
Small bug fix

[B]Version 3.6.2[/B]
added Streams and cricfree


[B]Version 3.6.1[/B]
added Bol and Geo etc, plus the sports section

[B]Version 3.6.0[/B]
added Bol and Geo etc, plus the sports section

B]Version 3.5.9[/B]
bigfix

B]Version 3.5.8[/B]
Added punjabi channels

B]Version 3.5.7[/B]
smart cric fix

B]Version 3.5.6[/B]
Fixed ads channel


[B]Version 3.5.5[/B]
fixed crichd and watchcric

[B]Version 3.5.4[/B]
add qtv

[B]Version 3.5.3[/B]
added channel24 and bol new yellow section (low quality)

[B]Version 3.5.2[/B]
icon updated

[B]Version 3.5.1[/B]
Added SSS in sports section

[B]Version 3.5.0[/B]
updated willow index and a settings to turn off Yellow channels

