@@ -180,7 +180,7 @@
 
 <addon id="plugin.video.ZemTV-shani"
        name="ZemTV.com"
-       version="3.9.7"
+       version="3.9.8"
        provider-name="shani">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
